[gd_scene load_steps=13 format=3 uid="uid://bphpdmmsdqanf"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_kg4ec"]
[ext_resource type="Texture2D" uid="uid://c3lix6m1sr8pq" path="res://Assets/UI/Border.png" id="2_6eh3v"]
[ext_resource type="Texture2D" uid="uid://cxq3ulj8y7o0v" path="res://Assets/Sprites/bare.png" id="2_ok5nv"]
[ext_resource type="Script" path="res://Scripts/NPC.gd" id="3_ggbwu"]
[ext_resource type="Texture2D" uid="uid://b305gyiy1canp" path="res://Assets/Sprites/mon_book.png" id="4_iyqxm"]
[ext_resource type="Texture2D" uid="uid://bc2u4ocwp1y34" path="res://Assets/Sprites/wizard.png" id="4_qn8ya"]
[ext_resource type="Texture2D" uid="uid://dl15v83fdbyfj" path="res://Assets/Sprites/examination_table.png" id="7_t6mku"]
[ext_resource type="Script" path="res://Scripts/examination_table.gd" id="7_vvbcd"]
[ext_resource type="PackedScene" uid="uid://cj7vyh4w4hv07" path="res://Scenes/scene_change_buttons.tscn" id="9_wcjxt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_och05"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okj4b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qeue0"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kg4ec")

[node name="MainScreen" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenBorders" type="TextureRect" parent="MainScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6eh3v")

[node name="ChatWindow" type="Panel" parent="MainScreen/ScreenBorders"]
layout_mode = 0
offset_left = 48.0
offset_top = 25.0
offset_right = 88.0
offset_bottom = 65.0
scale = Vector2(4.627, 8.59573)
theme_override_styles/panel = SubResource("StyleBoxEmpty_och05")

[node name="Character" type="Panel" parent="MainScreen/ScreenBorders/ChatWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.3808
offset_top = -0.0964546
offset_right = 0.100704
offset_bottom = 12.0388
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.95978, -1.96892)
theme_override_styles/panel = SubResource("StyleBoxEmpty_okj4b")
script = ExtResource("3_ggbwu")
character_sprite = ExtResource("4_qn8ya")

[node name="CharacterSprite" type="TextureRect" parent="MainScreen/ScreenBorders/ChatWindow/Character"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.462597
offset_bottom = 0.462597
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00347, 1.02213)
texture = ExtResource("2_ok5nv")
expand_mode = 1
flip_v = true

[node name="ChatBoxPosition" type="PanelContainer" parent="MainScreen/ScreenBorders/ChatWindow/Character"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519
anchor_top = 1.066
anchor_right = 0.519
anchor_bottom = 1.066
offset_left = -9.28037
offset_top = 5.08524
offset_right = 9.71963
offset_bottom = 11.0852
theme_override_styles/panel = SubResource("StyleBoxEmpty_qeue0")

[node name="BookShelf" type="Panel" parent="MainScreen/ScreenBorders"]
clip_contents = true
layout_mode = 0
offset_left = 28.0
offset_top = 407.0
offset_right = 259.0
offset_bottom = 503.0

[node name="MonsterBook" type="TextureButton" parent="MainScreen/ScreenBorders/BookShelf"]
layout_mode = 0
offset_left = 1.0
offset_right = 30.0
offset_bottom = 98.0
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_iyqxm")
stretch_mode = 0

[node name="ExaminationTable" type="Panel" parent="MainScreen/ScreenBorders"]
layout_mode = 0
offset_left = 293.0
offset_top = 400.0
offset_right = 1145.0
offset_bottom = 565.0
script = ExtResource("7_vvbcd")

[node name="ExamTableSprite2D" type="Sprite2D" parent="MainScreen/ScreenBorders/ExaminationTable"]
position = Vector2(423.567, 94.482)
scale = Vector2(2.27286, 1.80967)
texture = ExtResource("7_t6mku")

[node name="MonsterSpawnPoint" type="Node2D" parent="MainScreen/ScreenBorders/ExaminationTable"]
position = Vector2(423, 38)

[node name="SceneButtons" parent="." instance=ExtResource("9_wcjxt")]
layout_mode = 1
anchor_left = 0.215
anchor_top = -0.035
anchor_right = 0.674
anchor_bottom = 0.139
offset_left = 0.319992
offset_top = -0.32
offset_right = 0.552002
offset_bottom = -0.0720139

[connection signal="quest_complete_npc" from="." to="MainScreen/ScreenBorders/ChatWindow/Character" method="_on_main_ui_quest_complete_npc"]
[connection signal="pressed" from="MainScreen/ScreenBorders/BookShelf/MonsterBook" to="." method="_on_monster_book_pressed"]
